# ESP-Reader

./: .gitignore  CMakeLists.txt  Makefile  README.md  package-lock.json  package.json  partitions.csv  sdkconfig.defaults  spec.md
data/: korean-notes.md  math-notes.md  welcome.md
data/m/: math_notes_000.pbm  math_notes_001.pbm
docs/: architecture.md  format.md  roadmap.md  spec.md
main/: CMakeLists.txt  app_controller.cpp  app_controller.h  app_main.cpp  app_state.h  display_manager.cpp  display_manager.h  document_parser.cpp  document_parser.h  epaper_hal.cpp  epaper_hal.h  event.h  input_manager.cpp  input_manager.h  math_renderer.cpp  math_renderer.h  model.h  session_manager.cpp  session_manager.h  storage_manager.cpp  storage_manager.h  u8g2_font_unifont_t_greek.c  u8g2_font_unifont_t_korean2.cpp  u8g2_font_unifont_t_symbols.c
scripts/: preprocess_math.js
